<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow>

        <TextView
            android:id="@+id/row_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row1Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/discord_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row1Age"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row1Surname"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

    </TableRow>

</TableLayout>